force-app/main/default/objects/Card__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move to Property</fullName>
            </value>
            <value>
                <fullName>Move to Nearest Railroad</fullName>
            </value>
            <value>
                <fullName>Move to Nearest Utility</fullName>
            </value>
            <value>
                <fullName>Move X Spaces</fullName>
            </value>
            <value>
                <fullName>Money from Bank</fullName>
            </value>
            <value>
                <fullName>Money from Players</fullName>
            </value>
            <value>
                <fullName>Money to Bank</fullName>
            </value>
            <value>
                <fullName>Money to Players</fullName>
            </value>
            <value>
                <fullName>Get Out of Jail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>