force-app/main/default/objects/Card__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Value / cost associated with the Card.</description>
    <inlineHelpText>Value / cost associated with the Card.</inlineHelpText>
    <label>Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>