force-app/main/default/objects/Card__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Property associated with a Card action (ex. move to Broadway).</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>