force-app/main/default/objects/Card__c/recordTypes/Chance.recordType-meta.xml
<RecordType>
    <fullName>Chance</fullName>
    <active>true</active>
    <label>Chance</label>
</RecordType>