force-app/main/default/objects/Card__c/recordTypes/CommunityChest.recordType-meta.xml
<RecordType>
    <fullName>CommunityChest</fullName>
    <active>true</active>
    <label>Community Chest</label>
</RecordType>