force-app/main/default/objects/Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>ActionType__c</columns>
    <columns>Property__c</columns>
    <columns>Amount__c</columns>
    <columns>Spaces__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>